--- a/cztery.html
+++ b/cztery.html
@@ -19,8 +19,8 @@
     <h1>Muzyka</h1>
     <p>Oto przykłady najpopularniejszych muzyk Chopena.</p>
     <h2>
-        <a href="https://www.youtube.com/watch?v=H8_XFdBxOaw">W grocie króla gór</a>
-        <a href="https://www.youtube.com/watch?v=LZXJf_r9Qyk">Walc a-moll</a>
+        <a href="https://www.youtube.com/watch?v=H8_XFdBxOaw" target="_blank">W grocie króla gór</a>
+        <a href="https://www.youtube.com/watch?v=LZXJf_r9Qyk" target="_blank">Walc a-moll</a>
     </h2>
 
     <img src="Chopen gra.jpg" alt="Chopen">
