--- a/piec.html
+++ b/piec.html
@@ -17,4 +17,4 @@
         
     </ul>
     <h1>A teraz pora na Kahoot!</h1>
-    <a href="https://create.kahoot.it/details/1fcdcd8a-08ee-4c89-9fe4-c575810f1a04"></a>
+    <a href="https://play.kahoot.it/v2/?quizId=1fcdcd8a-08ee-4c89-9fe4-c575810f1a04" target="_blank">Zagraj</a>
